--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,17 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 body {
-  background-color: antiquewhite;
-  color: brown;
-  text-align: center;
-  margin-top: 100px;
+  margin: 0;
+  padding: 0;
+  background-color: darkblue;
+}
+
+#app {
+  margin: auto;
+  display: flex;
+}
+
+#jokeContainer {
+  background-color: white;
+  align-items: center;
 }
